# autodriver

./: README.md  drawlocal.py  log1.txt  outputglobal.txt  outputxyglobal.txt  start.sh  startsocketcan.sh
install/: local_setup.sh  setup.sh
local/: 10.txt  102.txt  103.txt  107.txt  108.txt  11.txt  112.txt  113.txt  115.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  127.txt  128.txt  13.txt  133.txt  134.txt  136.txt  14.txt  140.txt  142.txt  147.txt  15.txt  150.txt  16.txt  160.txt  161.txt  17.txt  173.txt  18.txt  182.txt  19.txt  191.txt  192.txt  (+99 more)
local_path/: 2025-01-14_15-19-292.txt  2025-01-14_15-19-313.txt  2025-01-14_15-19-334.txt  2025-01-14_15-19-345.txt  2025-01-14_15-19-366.txt  2025-01-14_15-19-387.txt  2025-01-14_15-19-398.txt  2025-01-14_15-19-419.txt  2025-01-14_15-19-4310.txt  2025-01-14_15-19-4511.txt  2025-01-14_15-19-4612.txt  2025-01-14_15-19-4813.txt  2025-01-14_15-19-5014.txt  2025-01-14_15-19-5115.txt  2025-01-14_15-19-5316.txt  2025-01-14_15-19-5517.txt  2025-01-14_15-19-5718.txt  2025-01-14_15-19-5819.txt  2025-01-14_15-20-0020.txt  2025-01-14_15-20-0221.txt  2025-01-14_15-20-0322.txt  2025-01-14_15-20-0523.txt  2025-01-14_15-20-0724.txt  2025-01-14_15-20-0925.txt  2025-01-14_15-20-1026.txt  2025-01-14_15-20-1227.txt  2025-01-14_15-20-1428.txt  2025-01-14_15-20-1529.txt  2025-01-14_15-20-1730.txt  2025-01-14_15-20-1931.txt  2025-01-14_15-20-2032.txt  2025-01-14_15-20-2233.txt  2025-01-14_15-20-2434.txt  2025-01-14_15-20-2635.txt  2025-01-14_15-20-2736.txt  2025-01-14_15-20-2937.txt  2025-01-14_15-20-3138.txt  2025-01-14_15-20-3239.txt  2025-01-14_15-20-3440.txt  2025-01-14_15-20-3641.txt  (+202 more)
log/: latest_build
output_txt/: 2025-01-14_14-53-46.txt  2025-01-14_15-06-01.txt  2025-01-14_15-06-32.txt  2025-01-14_15-08-51.txt  2025-01-14_15-12-49.txt  2025-01-14_15-14-04.txt  2025-01-14_15-19-13.txt
pure_pursuit/: pure_pursuit.cpp
robot/: charging_robot_collision_detection.cpp  charging_robot_collision_detection.h
src/: Byangtiao.py  draw.py
src/control/: CMakeLists.txt
src/local/: CMakeLists.txt
src/local/include/: Calobs.h  QP.h  dp_st_cost_.h  localFuns.h  local_dp_qp.h  localmath.h  piecewise_jerk_path_problem.h  piecewise_jerk_problem.h  piecewise_jerk_speed_optimizer.h  piecewise_jerk_speed_problem.h  piecewise_jerk_trajectory1d.h  quintic_polynomial_curve1d.h  speed_.h  toolKits.h
src/local/src/: Calobs.cpp  Speeddecisions.cpp  dp_st_cost_.cpp  localFuns.cpp  local_dp_qp.cpp  local_node3.cpp  local_node4.cpp  localmath.cpp  param.yaml  piecewise_jerk_problem.cpp  piecewise_jerk_speed_optimizer.cpp  speed_.cpp  toolKits.cpp
(+153 files in other folders)
